# ProjeDeneme

opengldeneme/: CMakeLists.txt  Camera.cpp  Camera.h  CubeVertices.h  Main.cpp  Mesh.cpp  Mesh.h  Shader.cpp  Shader.h  imgui.ini  opengldeneme.sln  opengldeneme.vcxproj  opengldeneme.vcxproj.filters
opengldeneme/opengldeneme/x64/Debug/: opengldeneme.exe.recipe  vc143.idb
opengldeneme/opengldeneme/x64/Debug/opengldeneme.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  opengldeneme.lastbuildstate
opengldeneme/shaders/: basic.frag  basic.vert
opengldeneme/x64/Debug/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  VirtualMuseum.sln  VirtualMuseum.vcxproj  VirtualMuseum.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
